<resources>
    <string name="directions_api_key">AIzaSyCl2iFx_yVcCpyc81NGX-y98SSZ5wRHMwI</string>
    <string name="places_api_key">AIzaSyDg9QjP82albYKhU2RbpIOJFBkXoKrsnWo</string>

    <string name="app_name">GreenRoute</string>

    <string name="ip">XXX.XXX.XXX.XXX</string>
    <string name="clear">Clear</string>

    <string name="NO2">NO₂ (ppb)</string>
    <string name="CO2">CO₂ (ppm)</string>

    <string name="login">Log In</string>
    <string name="login_register">REGISTER</string>
    <string name="login_back">BACK</string>

    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="button_use_now">Use Now</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>

    <string name="forgot_password">Forgot your password?</string>

    <string name="welcome_page_title_2">Multiple routes</string>
    <string name="welcome_page_content_2">You can always choose the best route tailored for you by getting multiple suggestions each time.</string>
    <string name="welcome_page_title_3">Live data</string>
    <string name="welcome_page_content_3">Continuously receive data from sensors all around you and be notified of environment issues.</string>
    <string name="welcome_page_title_1">Cleanest route</string>
    <string name="welcome_page_content_1">Determine the best route between 2 points based on real time data.</string>

    <string name="input_title_reset_password">Input email</string>
    <string name="input_content_reset_password">Enter the email associated with your account and we\'ll send you the instructions to reset your password</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_up_email">email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_email_error">Invalid or empty email address. Please try again</string>
    <string name="sign_up_password_empty">Please fill a password and try again</string>
    <string name="sign_up_passwords_error">Passwords do not match. You can tick the grey eye to see them!</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
</resources>
